--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,22 @@
   padding: 0;
   margin: 0;
 }
+body {
+  background-color: #fff;
+  width: 100%;
+  height: 100%;
+}
+.wrapper {
+  width: 80%;
+  margin: auto;
+  height: 100%;
+  text-align: left;
+}
+.wrapper h2 {
+  padding: 10px;
+  margin-bottom: 20px;
+}
+.wrapper p {
+  line-height: 20px;
+  margin-bottom: 10px;
+}
