--- a/css/style.css
+++ b/css/style.css
@@ -8,17 +8,17 @@ body {
   width: 100%;
   height: 100%;
 }
-.wrapper {
+.question-wrapper {
   width: 80%;
   margin: auto;
   height: 100%;
   text-align: left;
 }
-.wrapper h2 {
-  padding: 10px;
-  margin-bottom: 20px;
+.question-wrapper h2 {
+  padding: 0;
+  margin: 30px 0px;
 }
-.wrapper p {
+.question-wrapper p {
   line-height: 20px;
   margin-bottom: 10px;
 }
