--- a/css/style.css
+++ b/css/style.css
@@ -8,11 +8,79 @@ body {
   width: 100%;
   height: 100%;
 }
+h1 {
+  font-family: 'Roboto', sans-serif;
+  margin: 40px 0;
+}
+p {
+  font-family: 'Montserrat', sans-serif;
+  padding: 5px 0px;
+}
+a {
+  color: blue;
+  text-decoration: none;
+}
+li {
+  list-style: none;
+  font-family: 'Roboto', sans-serif;
+  display: inline-block;
+}
+main {
+  margin: 60px 0;
+  overflow-y: scroll;
+}
+/* common values */
+/* header */
+.header_top {
+  position: fixed;
+  background-color: #fff;
+  width: 100%;
+  z-index: 1;
+  top: 0;
+  left: 0;
+}
+/* navbars */
+.primary_navbar {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 10px;
+}
+.primary_navbar li {
+  padding-left: 10px;
+}
+.logo {
+  width: 80px;
+}
+#terms {
+  color: grey;
+  font-size: 20px;
+  text-transform: capitalize;
+}
+.secondary_navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0px 10px;
+  border-bottom: 1px solid lightgrey;
+}
+.navbar_selection li {
+  text-align: center;
+  padding-left: 10px;
+}
+.navbar_selection a {
+  color: grey;
+  padding-bottom: 3px;
+}
+li:hover a {
+  transition: color 1.2s ease;
+  color: lightblue;
+  border-bottom: 2px solid lightblue;
+}
+/* main wrapper questions */
 .question-wrapper {
-  width: 80%;
+  width: 50%;
   margin: auto;
-  height: 100%;
-  text-align: left;
 }
 .question-wrapper h2 {
   padding: 0;
@@ -21,4 +89,40 @@ body {
 .question-wrapper p {
   line-height: 20px;
   margin-bottom: 10px;
+}
+/* footer */
+.unique_footer_section {
+  background-color: lightgrey;
+  opacity: 0.6;
+  height: 60px;
+  width: 100%;
+}
+.footer_wrapper {
+  width: 50%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 20px;
+}
+.footer_info li {
+  padding-right: 15px;
+  text-align: center;
+}
+.footer_info a {
+  color: #000;
+}
+.footer_info li:hover a {
+  transition: color 1.2s ease;
+  color: crimson;
+  opacity: 1;
+  font-weight: bold;
+}
+.languages {
+  width: 100px;
+  height: 20px;
+  border-radius: 20px;
+  background-color: lightblue;
+  color: crimson;
+  opacity: 0.9;
+  font-weight: bold;
 }
